# geigen

./: .gitmodules  CMakeLists.txt  README.md
include/geigen/: geigen.h
script/: build
src/: geigen.cu  prototype.cpp  prototype.cu
